@@ -1,5 +1,17 @@
 2009-08-12  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/DefaultPolarItemRenderer.java
+    (getLegendItem): Handle multiple datasets,
+    * source/org/jfree/chart/plot/PolarPlot.java
+    (fixedLegendItems): New field,
+    (getFixedLegendItems): New method,
+    (setFixedLegendItems): Likewise,
+    (getIndexOf(PolarItemRenderer)): Likewise,
+    (getLegendItems): Handle multiple datasets,
+    (equals): Updated for new fields.
+
+2009-08-12  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
     (drawVerticalItems): Check for null outliers.
 
